--- a/frontend/src/components/core/ReportView/ReportView.scss
+++ b/frontend/src/components/core/ReportView/ReportView.scss
@@ -243,3 +243,12 @@
     background: #fff;
   }
 }
+
+@media print {
+  .reportview-container {
+    height: 100%;
+    position: static;
+    overflow-y: visible;
+    overflow-x: visible;
+  }
+}
