Nicer frontend exception display (#490)
- Defines a new exception class, `StreamlitAPIException`, that's used for exceptions resulting from improper usage of the streamlit API. (That is, `StreamlitAPIException` is meant for "user errors", like calling a DeltaGenerator function with bad inputs.)
- `Exception.proto` has a new field, `message_is_markdown`, which is True when the exception being sent is a `StreamlitAPIException` instance. Markdown formatting in the exception message will be nicely rendered on the frontend.
- `StreamlitAPIException` stack traces get all Streamlit entries pruned before being marshalled into the exception proto. This means that when a user misuses a Streamlit API, they no longer see a bunch of ScriptRunner and DeltaGenerator lines in the stack trace we show them.
- I updated most (all?) user-facing errors to use StreamlitAPIException, for the nicer formatting.
- Non-API-related errors, originating from the bowels of Streamlit, will _not_ be specially pruned/formatted, so this shouldn't hinder us when debugging Streamlit itself.

Fixes #438

--- a/frontend/src/components/elements/ExceptionElement/ExceptionElement.scss
+++ b/frontend/src/components/elements/ExceptionElement/ExceptionElement.scss
@@ -14,19 +14,21 @@
  * limitations under the License.
  */
 
+@import "src/assets/css/variables";
+
 .reportview-container {
-  .exception .message {
-    margin-bottom: 0.5rem;
+  .exception .message .type {
+    font-weight: bold;
   }
 
-  .exception .stack-trace {
+  .exception .stack-trace-row {
+    margin-top: 0.5rem;
+  }
+
+  .exception .stack-trace-title {
     font-family: "IBM Plex Mono", monospace;
     font-size: 0.8rem;
-    margin-left: 1rem;
-    margin-right: 1rem;
-  }
-
-  .exception .stack-trace .row {
     margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
   }
 }
