--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -106,9 +106,33 @@ pre {
 
 @media print {
   .stApp {
+    float: none;
     height: 100%;
     position: static;
-    overflow-y: visible;
-    overflow-x: visible;
+    overflow: visible;
+
+    .reportview-container {
+      display: block;
+      float: none;
+      height: 100%;
+      position: static;
+      overflow: visible;
+
+      .main {
+        @-moz-document url-prefix() {
+          display: block;
+        }
+
+        overflow: visible;
+      }
+
+      .element-container {
+        @-moz-document url-prefix() {
+          display: block;
+        }
+
+        overflow: visible;
+      }
+    }
   }
 }
