Fixing double font for firefox

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -129,6 +129,12 @@ pre {
       .element-container {
         @-moz-document url-prefix() {
           display: block;
+
+          .table {
+            th {
+              font-weight: normal;
+            }
+          }
         }
 
         overflow: visible;
