Fix embed=true padding and scrollbars

--- a/frontend/src/components/core/ReportView/ReportView.scss
+++ b/frontend/src/components/core/ReportView/ReportView.scss
@@ -243,3 +243,17 @@
     background: #fff;
   }
 }
+
+body.embedded .reportview-container {
+  .main {
+    overflow: hidden;
+
+    .block-container {
+      padding: 0;
+    }
+
+    footer {
+      display: none;
+    }
+  }
+}
