Fixing number input spin buttons for Firefox

--- a/frontend/src/components/widgets/NumberInput/NumberInput.scss
+++ b/frontend/src/components/widgets/NumberInput/NumberInput.scss
@@ -26,6 +26,8 @@
     align-items: center;
 
     input[type="number"] {
+      -moz-appearance: textfield;
+
       &::-webkit-inner-spin-button,
       &::-webkit-outer-spin-button {
         -webkit-appearance: none;
