--- a/frontend/src/components/elements/CodeBlock/CodeBlock.scss
+++ b/frontend/src/components/elements/CodeBlock/CodeBlock.scss
@@ -21,8 +21,13 @@
   See https://prismjs.com/download.html#themes=prism&languages=markup+css+clike+javascript
 */
 
-div.code-block {
-  margin: 0 0 1rem 0;
+div.stCodeBlock {
+  margin: 0 0 1em 0;
+  position: relative;
+
+  pre {
+    margin: 0;
+  }
 }
 
 .token.comment,
