--- a/frontend/src/assets/css/write.scss
+++ b/frontend/src/assets/css/write.scss
@@ -70,7 +70,7 @@
     .markdown-text-container {
       margin: 0;
 
-      & :last-child {
+      :last-child {
         margin-bottom: 0;
       }
     }
@@ -90,7 +90,7 @@
       text-decoration: underline;
     }
 
-    div.code-block {
+    div.stCodeBlock {
       button.overlayBtn {
         top: 0;
         right: 0;
