Copy-to-clipboard button is showing at wrong place (#655)
* Copy-to-clipboard button is showing at wrong place

* Fixing button alignment inside alerts and margins

* Using stCodeBlock

* Using mixin

--- a/frontend/src/assets/css/write.scss
+++ b/frontend/src/assets/css/write.scss
@@ -70,7 +70,7 @@
     .markdown-text-container {
       margin: 0;
 
-      & :last-child {
+      :last-child {
         margin-bottom: 0;
       }
     }
@@ -88,6 +88,13 @@
     a {
       color: inherit;
       text-decoration: underline;
+    }
+
+    div.stCodeBlock {
+      button.overlayBtn {
+        top: 0;
+        right: 0;
+      }
     }
   }
 }
